TIP 484: Merge 'int' and 'wideInt' Obj-type to a single 'int'. Adapt TIP text to match latest implementation changes (Variation on Don Porter's suggestion to no longer register the 'int' type)

--- a/tip/484.md
+++ b/tip/484.md
@@ -33,8 +33,8 @@ than the possible loss on some 32-bit system, I still propose to follow this roa
 
 Another advantage of this change is maintainability of number handling.
 Currently the C code contains a lot of #ifdef's which check whether
-sizeof(long) is the same a sizeof(wideint). All those checks can
-be removed, so the number handling becomes identical on all platforms
+sizeof(long) is the same a sizeof(wideint). Most of those checks can
+be removed, so the number handling becomes almost identical on all platforms
 supported by Tcl.
 
 # Proposal
@@ -58,20 +58,30 @@ Merge 'int' and 'wideInt' Obj-type to a single 'int'. Make the following changes
   all platforms. This makes all 'wideInt' special code redundant,
   so it can full be removed from the Tcl code base.
 
+* On 32-bit systems, use 'wideInt' in stead of 'int', this makes it more
+  clear to extensions that the internal implementation changed.
+
 # Compatibility
 
 On systems where sizeof(int) == sizeof(long), there are no compatibility
-issues, since the 'wideInt' type code is #ifdef'ed out anyway. On other
-systems there are only two possibilities:
+issues, since those systems don't have the 'wideInt' type now (this code
+is #ifdef'ed out). On other systems:
 
-* The function call `Tcl_GetObjType("wideInt")` will return NULL, where it
+* The function call `Tcl_GetObjType("int")` will return NULL, where it
   returned non-NULL before.
 
-* External code which accesses internalRep.longValue directly (after
-  checking that the objType is 'int') will start to mis-behave as well.
+* The function call `Tcl_GetObjType("wideInt")` will return non-NULL, where it
+  returned NULL before.
 
 However, both of these examples are nonportable, since no external
-code may make assumptions of implementation details for 'int'.
+code may make assumptions of implementation details for 'int'/'wideInt'.
+There are a few extensions which assume that `Tcl_GetObjType("int")`
+always return non-NULL. Example: "nsf". It's easy to fix that. If any
+packages maintainers need help doing that, just ask.
+
+In Tcl 9.0, "wideInt" (which is actually the new implementation of "int")
+will be renamed to "int", and both `Tcl_GetObjType("int")`
+and `Tcl_GetObjType("wideInt")` will return NULL;
 
 No test-cases are modified in the 'no-wideint' branch, all current
 test-cases continue to pass. This shows that separating the 'int'
