tip490 oo for msgcat: documented use-case: msgcat call within class definition script

--- a/tip/490.md
+++ b/tip/490.md
@@ -42,7 +42,7 @@ package provide foo 1.0
 
 # Documentation
 
-There are 3 use-cases to consider (which may be intermixed in the same package):
+There are 4 use-cases to consider (which may be intermixed in the same package):
 
 (with 'Servus!' as translation for 'Hi!')
 
@@ -58,14 +58,25 @@ namespace eval ::N1 {
 }
 
 % N1::m1
-Servus!
+-> Servus!
 </pre>
 
-## Use-case 2: The package implementation is done by a class
+## Use-case 2: msgcat is called within a class definition script
+
+<pre>
+% namespace import msgcat::*
+% namespace eval ::N2 {
+    mcload $dir/msgs
+    oo::class create C1 {puts [mc Hi!]}
+}
+-> Servus!
+</pre>
+
+## Use-case 3: msgcat is called from a method in an object and the method is defined in a class
 
 <pre>
 namespace import msgcat::*
-namespace eval ::N2Class {
+namespace eval ::N3Class {
     mcload $dir/msgs
     oo::class create C1
     oo::define C1 method m1 {
@@ -74,55 +85,55 @@ namespace eval ::N2Class {
 }
 
 # The class object may be used in another namespace
-namespace eval ::N2Obj {
-    set O1 [::N2Class::C1 new]
+namespace eval ::N3Obj {
+    set O1 [::N3Class::C1 new]
 }
 
-% $N2Obj::O1 m1
-Servus!
+% $N3Obj::O1 m1
+-> Servus!
 </pre>
 
-## Use-case 3: The package implementation is done by a classless object
+## Use-case 4: msgcat is called from a method of a classless object
 
 <pre>
 namespace import msgcat::*
-namespace eval ::N3 {
+namespace eval ::N4 {
     mcload $dir/msgs
-    oo::object create O2
-    oo::objdefine O2 method m1 {} {
+    oo::object create O1
+    oo::objdefine O1 method m1 {} {
         puts [mc Hi!]
     }
 }
 
-% N3::O2 m1
-Servus!
+% N4::O1 m1
+-> Servus!
 </pre>
 
-## Use-case 1 may be emulated in Use-case 2 and Use-case 3 using "namespace eval"
+## Use-case 1 may be emulated in Use-case 2 to 4 using "namespace eval"
 
-Before this extension, a programmer for use-case 2 and use-case 3 must have used "namespace eval" to explicitly specify the package namespace:
+Before this extension, a programmer for use-case 2 to 4 must have used "namespace eval" to explicitly specify the package namespace:
 
 <pre>
 namespace import msgcat::*
-namespace eval ::N3 {
+namespace eval ::N4 {
     mcload $dir/msgs
-    oo::object create O2
-    oo::objdefine O2 method m1 {} {
-        puts [namespace eval ::N3 {mc Hi!}]
+    oo::object create O1
+    oo::objdefine O1 method m1 {} {
+        puts [namespace eval ::N4 {mc Hi!}]
     }
 }
 
-% N3::O2 m1
-Servus!
+% N4::O1 m1
+-> Servus!
 </pre>
 
 This should still work with the new extension for compatibility reasons.
 
 # Usage
 
-There are 4 extensions proposed:
+There are 4 proposed extensions to current msgcat 1.6.1:
 
-## Extension 1: Extend all msgcat commands to support all 3 use-cases.
+## Extension 1: Extend all msgcat commands to support all 4 use-cases.
 
 So any **msgcat** command will detect the scenario on its own and extract the package namespace automatically.
 
@@ -146,7 +157,7 @@ proc ::tooltip::tooltip {widget message} {
 }
 </pre>
 
-This will work in all use-cases, e.g. if `tooltip::tooltip` is called by a method following use-case 1 to 3.
+This will work in all use-cases, e.g. if `tooltip::tooltip` is called by a method following use-case 1 to 4.
 
 ## Extension 2: new command to get package namespace
 
@@ -167,15 +178,18 @@ The upper tooltip example, where the translation is extracted when the tooltip i
 proc ::tooltip::tooltip {widget message} {
     ...
     set messagenamespace [uplevel 1 {::msgcat::mcpackagenamespaceget}]
+    ...
+    bind $widget <Enter> [list ::tooltip::show $widget $messagenamespace $message]
 }
 
 proc ::tooltip::show {widget messagenamespace message} {
     ...
     set message [namespace eval $messagenamespace [list ::msgcat::mc $message]]
+    ...
 }
 </pre>
 
-Examples with the 3 use-cases:
+Examples with the 4 use-cases:
 
 ### Use-case 1: the package does not use OO
 
@@ -185,37 +199,47 @@ namespace eval ::N1 {
 }
 
 % N1::m1
-::N1
+-> ::N1
 </pre>
 
-### Use-case 2: The package implementation is done by a class
+### Use-case 2: call within class definition script
 
 <pre>
-namespace eval ::N2Class {
+% namespace eval ::N2Class {
+    oo::class create C1 {puts "pns=[msgcat::mcpackagenamespaceget]"}
+}
+-> pns=::N2Class
+-> ::N2Class::C1
+</pre>
+
+### Use-case 3: The package implementation is done by a class
+
+<pre>
+namespace eval ::N3Class {
     oo::class create C1
     oo::define C1 method m1 {msgcat::mcpackagenamespaceget}
 }
 
 # The class object may be used in another namespace
 
-namespace eval ::N2Obj {
-    set O1 [::N2Class::C1 new]
+namespace eval ::N3Obj {
+    set O1 [::N3Class::C1 new]
 }
 
-% $N2Obj::O1 m1
-::N2Class
+% $N3Obj::O1 m1
+-> ::N3Class
 </pre>
 
-### Use-case 3: The package implementation is done by a classless object
+### Use-case 4: The package implementation is done by a classless object
 
 <pre>
-namespace eval ::N3 {
-    oo::object create O2
-    oo::objdefine O2 method m1 {} {msgcat::mcpackagenamespaceget}
+namespace eval ::N4 {
+    oo::object create O1
+    oo::objdefine O1 method m1 {} {msgcat::mcpackagenamespaceget}
 }
 
-% N3::O2 m1
-::N3
+% N4::O1 m1
+-> ::N4
 </pre>
 
 ### Manually overwrite the package namespace by namespace eval
@@ -223,19 +247,19 @@ namespace eval ::N3 {
 As stated in the introduction, current oo code might have used an explicit `namespace eval packagenamespace` to make msgcat work. This should still be supported:
 
 <pre>
-namespace eval ::N3 {
-    oo::object create O2
-    oo::objdefine O2 method m1 {} {
-        namespace eval ::N4 { msgcat::mcpackagenamespaceget}
+namespace eval ::N4 {
+    oo::object create O1
+    oo::objdefine O1 method m1 {} {
+        namespace eval ::N5 { msgcat::mcpackagenamespaceget}
     }
 }
 
-% N3::O2 m1
-::N4
+% N4::O1 m1
+-> ::N5
 </pre>
 
-Remark, that in most real cases, one will explicitly specify "::N3" instead "::N4", as this is the package namespace.
-"::N4" was chosen in the example to show the fact, that the "namespace eval" overwrites any class-magic.
+Remark, that in most real cases, one will explicitly specify "::N4" instead "::N5", as this is the package namespace.
+"::N5" was chosen in the example to show the fact, that the "namespace eval" overwrites any class-magic.
 
 ## Extension 3: new command to get a translation with a package namespace as argument
 
@@ -317,19 +341,27 @@ proc msgcat::mc {src args} {
 }
 proc ::msgcat::PackageNamespaceGet {} {
     uplevel 2 {
-        # Check for no object
-        # (undocumented test proposed by dkf 2018-01-12)
-        if { [namespace which self] ne "::oo::Helpers::self"} {
-            return [namespace current]
-        }
-        # Get Class
-        set Class [info object class [self]]
-        # Check for a classless object
-        if {$Class eq {::oo::object}} {
-            return [namespace qualifiers [self]]
-        }
-        # Object defined by class
-        return [namespace qualifiers $Class]
+	# Check for no object
+	switch -exact -- [namespace which self] {
+	    {::oo::define::self} {
+		# We are within a class definition
+		return [namespace qualifiers [self]]
+	    }
+	    {::oo::Helpers::self} {
+		# We are within an object
+		set Class [info object class [self]]
+		# Check for classless defined object
+		if {$Class eq {::oo::object}} {
+		    return [namespace qualifiers [self]]
+		}
+		# Class defined object
+		return [namespace qualifiers $Class]
+	    }
+	    default {
+		# Not in object environment
+		return [namespace current]
+	    }
+	}
     }
 }
 </pre>
@@ -363,6 +395,16 @@ To not decrease performance would require to introduce new commands, what I thin
 We would loose the flexibility and backward compatibility to just insert a 3rd party package, which may call "uplevel 1 msgcat::mc tag", and it works.
 
 For performance enthusiasts, one may use "mcn", which may be little faste than former msgcat.
+
+## Issue 4: does not work for tcl 8.6
+
+The `self` command does not work for tcl 8.6 within class definition scripts.
+
+It returns the error message:
+
+<verb>
+wrong # args: should be "self arg ?arg ...?"
+</verb>
 
 # Alternatives
 
