Replaced tip number in text.

--- a/tip/496.md
+++ b/tip/496.md
@@ -1,4 +1,4 @@
-# TIP xxx: Display hints in ::ttk::entry
+# TIP 496: Display hints in ::ttk::entry
 	Author:         René Zaumseil <rzaumseil@kkg.ch>
 	State:          Draft
 	Type:           Project
@@ -49,7 +49,7 @@ The -emptytext value is always displayed with current font and left justificatio
 
 A patch implementing these changes and updating the documentation is available.
 
-The patch should go in the fossil repository in the tip-xxx branch.
+The patch should go in the fossil repository in the tip-496 branch.
 
 # Example of use
 
