New TIP 497: Full support for Unicode 10.0 and later (part 2)

--- a/tip/389.md
+++ b/tip/389.md
@@ -1,4 +1,4 @@
-# TIP 389: Full support for Unicode 10.0 and later
+# TIP 389: Full support for Unicode 10.0 and later (part 1)
 	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
@@ -127,7 +127,7 @@ exists for the first character in a string, and it only occurs when the
 In the current implementation "string length \\U10000" will return 2 in
 stead of the expected 1. The reason for this is that many internal
 operations convert the representation into UTF-16 format, which occupies
-two surrogate characters. This might change in future Tcl implementations.
+two surrogate characters. This should change in future Tcl implementations.
 Correcting this would involve many internal changes, and the risk of
 introducing crashes because of miscounting bytes (as have been reported
 in the past, during the tip-389 branch implementation development).
@@ -154,6 +154,11 @@ So, the "string length" of a Unicode character >U+FFFF is 2, and if you try to
 split it in two separate characters that won't work: It will then be split
 in a character with length 2 (the original one) and another character with
 length 0 (the empty string).
+
+Also note that the regexp engine still cannot handle Unicode characters >U+FFFF,
+this engine will handle those as if they consist of 2 separate characters.
+
+Those caveats are planned to be handled in "part 2" (TIP #497)
 
 # Reference Implementation
 
