Add "Caveats" and "Rejected Alternatives" sections to TIP #484

--- a/tip/484.md
+++ b/tip/484.md
@@ -73,12 +73,6 @@ is #ifdef'ed out). On other systems:
 * The function call `Tcl_GetObjType("wideInt")` will return non-NULL, where it
   returned NULL before.
 
-However, both of these examples are nonportable, since no external
-code may make assumptions of implementation details for 'int'/'wideInt'.
-There are a few extensions which assume that `Tcl_GetObjType("int")`
-always return non-NULL. Example: "nsf". It's easy to fix that. If any
-packages maintainers need help doing that, just ask.
-
 In Tcl 9.0, "wideInt" (which is actually the new implementation of "int")
 will be renamed to "int", and both `Tcl_GetObjType("int")`
 and `Tcl_GetObjType("wideInt")` will return NULL;
@@ -94,6 +88,31 @@ script level, the change is invisible.
 An implementation of this TIP can be found in the [no-wideint](https://core.tcl.tk/tcl/timeline?r=no-wideint) branch.
 
 The code is licensed under the same license as Tcl.
+
+# Caveats
+
+* Extensions which assume that Tcl_GetObjType("int") returns non-NULL will no longer
+  work with 64-bit Tcl 8.7 (but it will still work on 32-bit Tcl 8.7). Example:
+  Tk <= 8.6.8 (this is corrected in Tk 8.6.9). No external code may make assumptions
+  of implementation details for 'int'/'wideInt'. There are a few extensions which assume
+  that `Tcl_GetObjType("int")` always return non-NULL. It's easy
+  to fix that. If any packages maintainers need help doing that, just ask.
+  
+  Other examples (the only 3 I found):
+  
+  * tbcload (cmdRead.c)
+  * tclxml (tclxslt-libxslt.c)
+  * VecTcl (nacomplex.c, vectcl.c, vectcl.tcl.c)
+
+# Rejected Alternatives
+
+* It would have been possible to keep the objType to be named "int" on all platforms.
+  That would mean that 32-bit extensions which access internalRep.longValue directly
+  might silently fail without any warning.
+
+* Another possibility is just remove the registration of the "int"/"wideInt" objType
+  altogether. This would mean that all extensions using Tcl_GetObjType("int") will start
+  failing during start-up immediately. This will be done for Tcl 9.0, but would be too early for 8.7.
 
 # Copyright
 
