Clearify behavioral change between 32-bit and 64-bit.

--- a/tip/484.md
+++ b/tip/484.md
@@ -24,7 +24,7 @@ calculations are just as efficient as int/long calculations on most (64-bit and
 32-bit) processors, it would save all kinds of range checks in the Tcl code.
 That's the main gain of this TIP.
 
-Finally, for 32-bit systems, getting rid of 'wideInt' could give a small
+Finally, for 32-bit systems, getting rid of 'int' could give a small
 disadvantage on systems which split 64-bit calculations in terms of 32-bit
 calculations. There 32-bit calculations could become slightly slower.
 
@@ -63,9 +63,9 @@ Merge 'int' and 'wideInt' Obj-type to a single 'int'. Make the following changes
 
 # Compatibility
 
-On systems where sizeof(int) == sizeof(long), there are no compatibility
-issues, since those systems don't have the 'wideInt' type now (this code
-is #ifdef'ed out). On other systems:
+On systems where sizeof(Tcl_WideInt) == sizeof(long) (e.g. linux64), there
+are no compatibility issues, since those systems don't have the 'wideInt'
+type now (this code is #ifdef'ed out). On other systems:
 
 * The function call `Tcl_GetObjType("int")` will return NULL, where it
   returned non-NULL before.
@@ -92,7 +92,7 @@ The code is licensed under the same license as Tcl.
 # Caveats
 
 * Extensions which assume that Tcl_GetObjType("int") returns non-NULL will no longer
-  work with 64-bit Tcl 8.7 (but it will still work on 32-bit Tcl 8.7). Example:
+  work with 32-bit Tcl 8.7 (but it will still work on 64-bit Tcl 8.7). Example:
   Tk <= 8.6.8 (this is corrected in Tk 8.6.9). No external code may make assumptions
   of implementation details for 'int'/'wideInt'. There are a few extensions which assume
   that `Tcl_GetObjType("int")` always return non-NULL. It's easy
