Describe the introduction of a dummy "int" type, which restores compatibility for all 8.x release.

--- a/tip/484.md
+++ b/tip/484.md
@@ -53,29 +53,34 @@ Merge 'int' and 'wideInt' Obj-type to a single 'int'. Make the following changes
   On script level this change is not detectable.
 
 * Modify the 'int' type to store its internal representation in
-    internalRep.wideValue in stead of internalRep.longValue. This means
+  internalRep.wideValue in stead of internalRep.longValue. This means
   that the 'int' type gains the full functionality of 'wideInt' on
   all platforms. This makes all 'wideInt' special code redundant,
   so it can full be removed from the Tcl code base.
 
 * On 32-bit systems, use 'wideInt' in stead of 'int', this makes it more
-  clear to extensions that the internal implementation changed.
+  clear to extensions that the internal implementation changed. But also
+  a new dummy "int" type is introduced, in order to restore compatibility
+  with extensions like "tbcload", "tclxml", "VecTcl", which (incorrectly)
+  assume that Tcl_GetObjType("int") will never return NULL.
+
+* Starting with Tcl 9.0, no longer register the "int"/"wideInt" types. So
+  the only way to get hand on the int type is:
+<pre>
+    Tcl_Obj obj = Tcl_NewIntObj(0);
+    intType = obj->typePtr;
+    Tcl_DecrRefCount(obj);
+</pre>
 
 # Compatibility
 
-On systems where sizeof(Tcl_WideInt) == sizeof(long) (e.g. linux64), there
-are no compatibility issues, since those systems don't have the 'wideInt'
-type now (this code is #ifdef'ed out). On other systems:
+Starting with Tcl 9.0:
 
-* The function call `Tcl_GetObjType("int")` will return NULL, where it
-  returned non-NULL before.
+* The function call `Tcl_GetObjType("int")` will return NULL, where it returned non-NULL before.
 
-* The function call `Tcl_GetObjType("wideInt")` will return non-NULL, where it
-  returned NULL before.
+On systems where sizeof(Tcl_WideInt) != sizeof(long)
 
-In Tcl 9.0, "wideInt" (which is actually the new implementation of "int")
-will be renamed to "int", and both `Tcl_GetObjType("int")`
-and `Tcl_GetObjType("wideInt")` will return NULL;
+* The function call `Tcl_GetObjType("wideInt")` will return NULL, where it returned non-NULL before.
 
 No test-cases are modified in the 'no-wideint' branch, all current
 test-cases continue to pass. This shows that separating the 'int'
@@ -91,15 +96,13 @@ The code is licensed under the same license as Tcl.
 
 # Caveats
 
-* Extensions which assume that Tcl_GetObjType("int") returns non-NULL will no longer
-  work with 32-bit Tcl 8.7 (but it will still work on 64-bit Tcl 8.7). Example:
-  Tk <= 8.6.8 (this is corrected in Tk 8.6.9). No external code may make assumptions
-  of implementation details for 'int'/'wideInt'. There are a few extensions which assume
-  that `Tcl_GetObjType("int")` always return non-NULL. It's easy
-  to fix that. If any packages maintainers need help doing that, just ask.
-  
-  Other examples (the only 3 I found):
-  
+* Starting with Tcl 9.0, Extensions which assume that Tcl_GetObjType("int") returns non-NULL
+  will no longer work. No external code may make assumptions of implementation details for
+  'int'/'wideInt'. There are a few extensions which assume that `Tcl_GetObjType("int")`
+  always return non-NULL. It's easy to fix that. If any packages maintainers need help doing that, just ask.
+
+  Some examples (the only 3 I found):
+
   * tbcload (cmdRead.c)
   * tclxml (tclxslt-libxslt.c)
   * VecTcl (nacomplex.c, vectcl.c, vectcl.tcl.c)
