Voting for TIP's #484 and #493 started

--- a/tip/484.md
+++ b/tip/484.md
@@ -1,8 +1,8 @@
 # TIP 484: Merge 'int' and 'wideInt' Obj-type to a single 'int'
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        06-Nov-2017
 	Post-History:
 	Keywords:       Tcl
