--- a/tip/493.md
+++ b/tip/493.md
@@ -1,8 +1,8 @@
 # TIP 493: Cease Distribution of http 1.0
 	Author:         Don Porter <dgp@users.sf.net>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        29-Dec-2017
 	Post-History:   
 	Tcl-Version:    8.7
