--- a/tip/476.md
+++ b/tip/476.md
@@ -75,7 +75,7 @@ This TIP proposes serveral things:
 
    *   Add the "a" and "A" type fields, for formatting floats in hex. Conforming
        to ISO C99, except that the "p" in the output is always lowercase. Since
-       hex float format is not an offical Tcl number representation, those type
+       hex float format is not a valid Tcl number representation, those type
        fields will _not_ be added to Tcl's "scan" command.
 
    *   Allow macro's from `<inttypes.h>`, such as `PRId32` and `PRId64`, to be used in
@@ -92,7 +92,7 @@ This TIP proposes serveral things:
 
    *   Add a new "L" length modifier. When used in combination with "f" or "g",
        it allows long doubles to be formatted. Since Tcl doesn't handle long doubles
-       internally, it is converted to a normal double internally first.
+       internally, the value is converted to a normal double first.
        For integers, "L" indicates that the value to be formatted is of type `mp_int`,
        the function expect a pointer to it as argument. Since standard C printf
        format handles don't handle `mp_int` types, this will result in a gcc warning,
@@ -109,6 +109,11 @@ This TIP proposes serveral things:
        a width field and the formatted number is not `0`, i.e. when there is
        possible confusion with an octal number. Since in Tcl 9.0 octal numbers
        with "0" prefix will be gone, "#" will not produce the decimal prefix any more.
+
+   *   Add a `%p` modifier (but not to "scan"), which is shorthand for `0x%zx`.
+       So it outputs the integer in hexadecimal form with "0x" prefix (since Tcl doesn't know
+       about pointers). In `Tcl_ObjPrintf()` this can be used to format pointers without first
+       casting it to `ptrdiff_t` or `size_t`, as does the equivalent C printf `%p` modifier.
 
 # Considerations regarding the incompatibility
 
