TIP #485 accepted: YES: 10 x (AF, AK, BG, DGP, FV, JD, JE, JN, KBK, SL) NO: 0 ABSTAIN: 0 Format TIP #484 (no textual change, since voting already started)

--- a/tip/484.md
+++ b/tip/484.md
@@ -67,9 +67,9 @@ Merge 'int' and 'wideInt' Obj-type to a single 'int'. Make the following changes
 * Starting with Tcl 9.0, no longer register the "int"/"wideInt" types. So
   the only way to get hand on the int type is:
 <pre>
-    Tcl_Obj obj = Tcl_NewIntObj(0);
+    Tcl\_Obj *obj = Tcl\_NewIntObj(0);
     intType = obj->typePtr;
-    Tcl_DecrRefCount(obj);
+    Tcl\_DecrRefCount(obj);
 </pre>
 
 # Compatibility
