--- a/tip/485.md
+++ b/tip/485.md
@@ -1,8 +1,8 @@
 # TIP 485: Remove Deprecated API
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Voting
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        08-Nov-2017
 	Post-History:   
 	Tcl-Version:    9.0
