Change "ucs32" to the conventional Unicode name "UTF-32".

--- a/tip/497.md
+++ b/tip/497.md
@@ -1,6 +1,7 @@
 # TIP 497: Full support for Unicode 10.0 and later (part 2)
 	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
+	Author:         Don Porter <donald.porter@nist.gov>
 	State:          Draft
 	Type:           Project
 	Vote:           Pending
@@ -29,14 +30,14 @@ TODO
 
 This document proposes:
 
- * Add a new objType "ucs32", which is able to store a string in 32-bits
+ * Add a new objType "UTF-32", which is able to store a string in 32-bits
    per character.
 
- * Adapt the regexp engine to start using the "ucs32" objType: Any string
-   handled by regexp will first be converted to "ucs32".
+ * Adapt the regexp engine to start using the "UTF-32" objType: Any string
+   handled by regexp will first be converted to "UTF-32".
 
  * Modify all API using Tcl_UniChar: If the string contains surrogate pairs,
-   the "ucs32" objType will used.
+   the "UTF-32" objType will used.
 
  * Modify all functions using or producing an index: "string length <Unicode>"
    should return 1 for all Unicode characters, even the ones >= **U\+010000**
