Allow -stride to be 1.

--- a/tip/351.md
+++ b/tip/351.md
@@ -34,13 +34,13 @@ We propose adding a **-stride** option to **lsearch**, by exact analogy with the
 If **-stride** is supplied, the list will be treated as consisting of groups of **grpSize** elements.
 The search will be operated within this group as if it is a first level of nested lists \(see _Conceptual Backround_ below\).
 
-The first element of **-index** is used to seach for an item of the group. If **-stride** is given, **-index** defaults to 0.
+The first element of **-index** is used to seach for an item of the group. If **-stride** is given and not 1, **-index** defaults to 0.
 
 The option **-start** always points to the beginning of the group, even if a position within the group is given.
 
 Returned indices are the first element of the striding group\(s\) that is/are being indicated.
 
-The list length must be a multiple of **grpSize**, which in turn must be at least 2.
+The list length must be a multiple of **grpSize**, which in turn must be at least 1. A **-stride** of 1 is the default and indicates no grouping.
 
 With **-inline**, the return value is a strided list if length **grpSize** (or multiple of, with **-all**).
 
