Add table with examples, showing the difference between this TIP's "#" modifier and the 8.6 behavior. As suggested by Donald G Porter.

--- a/tip/476.md
+++ b/tip/476.md
@@ -121,9 +121,17 @@ This change is almost fully upwards compatible. As long as Tcl extensions use th
 `Tcl_WideInt`/`Tcl_WideUInt` data types (in stead of `long long` or `__int64`),
 everything works as before.
 
-In some situations, "format" doesn't produce the exact same output as Tcl 8.6
+When using the "#" modifier, "format" doesn't produce the exact same output as Tcl 8.6
 any more, but only rarely used corner cases are affected. As the "main.c"
-example shows, the result is more similar to ISO C99 than before.
+example shows, the result is more similar to ISO C99 than before. Here is a summary
+of the changes, and the 'compatible' format string if you want the 8.6 behavior
+(most likely you are using that already):
+
+|  format_string |   value    |    8.6        | 8.7          |  compatible
+|  ---           |   ---      |    ---        | ---          |  ---
+|    "%#o"       |     15     |     017       |   0o17       |    "0%o"
+|    "%#0d"      |     15     |     15        |   0d15       |    "%0d"
+|    "%#X"       |     15     |     0XF       |   0xF        |    "0X%X"
 
 # Reference Implementation
 
