TIP #492: Mention removal of naming details from the tk busy man page.

--- a/tip/492.md
+++ b/tip/492.md
@@ -25,6 +25,7 @@ It is proposed to:
 
 1. Let the **tk busy hold** subcommand (and its shortcut **tk busy**) return the pathname of the busy window instead of the empty string.
 2. Provide a new subcommand **tk busy busywindow** to return that same information, or the empty string if the windows passed to it is currently not busy.
+3. Remove any mention of the details of the busy window naming from the man page.
 
 
 # Implementation
