Added ttk::spinbox and ttk::combobox

--- a/tip/496.md
+++ b/tip/496.md
@@ -1,4 +1,4 @@
-# TIP 496: Display hints in ::ttk::entry
+# TIP 496: Display hints in ::entry ::ttk::entry ::ttk::spinbox and ::ttk::conbobox
 	Author:         René Zaumseil <rzaumseil@kkg.ch>
 	State:          Draft
 	Type:           Project
@@ -18,13 +18,13 @@ Entry fields should support the ability to display informational text when no te
 Entry fields, p.e. search boxes in browsers, have the ability to display some help text inside if no real value is given.
 The text is with a lighter color and is removed if the user enters some real text.
 
-The **entry** and **ttk::entry**command can easily enhanced to provide this
+The **entry** and **ttk::entry ttk::spinbox ttk::combobox** commands can easily enhanced to provide this
 support, and there is no interference with existing code as this
 functionality can be done by just introducing new options.
 
 # Specification
 
-A help text can be displayed on **entry** and **ttk::entry** widgets if no text is otherwise displayed.
+A help text can be displayed on **entry** and **ttk::entry ttk::spinbox ttk::combobox** widgets if no text is otherwise displayed.
 To control the text appearance the following new options will be added:
 
  -emptytext: The string to display.
@@ -49,7 +49,7 @@ The -emptytext value is always displayed with current font and left justificatio
 
 A patch implementing these changes and updating the documentation is available.
 
-The patch should go in the fossil repository in the tip-496 branch.
+The patch is in the fossil repository in the tip-496 branch.
 
 # Example of use
 
