--- a/tip/496.md
+++ b/tip/496.md
@@ -1,4 +1,4 @@
-# TIP 496: Display hints in ::entry ::ttk::entry ::ttk::spinbox and ::ttk::conbobox
+# TIP 496: Display hints in ::entry ::ttk::entry ::ttk::spinbox and ::ttk::combobox
 	Author:         René Zaumseil <rzaumseil@kkg.ch>
 	State:          Draft
 	Type:           Project
