Voting for TIP #476 now in progress, until [clock format 1518609600] (Wed Feb 14 12:00 UCT 2018)

--- a/tip/476.md
+++ b/tip/476.md
@@ -1,8 +1,8 @@
 # TIP 476: Scan/Printf format consistency
 	Author: Jan Nijtmans (jan.nijtmans@gmail.com)
-	State: Draft
+	State: Voting
 	Type: Project
-	Vote: Pending
+	Vote: In progress
 	Created: 27-Sep-2017
 	Post-history: PM
 	Tcl-Version: 8.7
