TIP #492 is now in 'Voting' state

--- a/tip/492.md
+++ b/tip/492.md
@@ -1,8 +1,8 @@
 # TIP 492: Introspection for 'tk busy'
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        19-Dec-2017
 	Post-History:
 	Keywords:       tk busy
