Changed option names

--- a/tip/496.md
+++ b/tip/496.md
@@ -27,23 +27,23 @@ functionality can be done by just introducing new options.
 A help text can be displayed on **entry** and **ttk::entry ttk::spinbox ttk::combobox** widgets if no text is otherwise displayed.
 To control the text appearance the following new options will be added:
 
- -emptytext: The string to display.
+ -placeholder: The string to display.
 
- -emptyforeground: The color of the text.
+ -placeholderforeground: The color of the text. This is a normal option for **entry** and a style option for **ttk::entry**.
 
-If the -emptytext is empty (the default value) then nothing is displayed.
+If the -placeholder text is empty (the default value) then nothing is displayed.
 
-The -emptyforeground has a default value of #b3b3b3 (gray70).
+The -placeholderforeground has a default value of #b3b3b3 (gray70).
 
-The -emptytext value is always displayed with current font and left justification.
+The -placeholder text value is always displayed with current font and left justification.
 
 # Discussion
 
-- The naming of the options should start with a common prefix. This prefix can be changed from empty to p.e. help.
+- The naming of the options follows the naming on windows and macos.
 
-- The default value for the -emptyforeground option needs to be specified?
+- The default value for the -placeholderforeground option needs to be specified?
 
-- Are -emptyfont and -emptyjustify options necessary?
+- Are -placeholderfont and -placeholderjustify options necessary?
 
 # Implementation
 
@@ -54,12 +54,17 @@ The patch is in the fossil repository in the tip-496 branch.
 # Example of use
 
 	    package require Tk
+	    # tk entry
 	    grid [::ttk::entry .e];#normal display
-	    .e configure -emptytext test;#display text is: test
-	    .e configure -emptybackground red;#display text is now red
+	    .e configure -placeholder test;#display text is: test
+	    .e configure -placeholderforeground red;#display text is now red
 	    .e insert end xxx;#display text is xxx, color is black
 	    .e configure -textvariable a; set a yyy;##display text is yyy
 	    set a {};#display text is test, color is red
+	    # ttk entry
+	    ttk::entry .e1
+	    ttk::style configure TEntry -placeholderforeground red
+	    .e1 configure -placeholder test
 
 # Copyright
 
