TIP's #484 and #493 accepted

--- a/tip/484.md
+++ b/tip/484.md
@@ -1,8 +1,8 @@
 # TIP 484: Merge 'int' and 'wideInt' Obj-type to a single 'int'
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Voting
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        06-Nov-2017
 	Post-History:
 	Keywords:       Tcl
