Change mclocalpreferences subcommand from setpreferences to preferences

--- a/tip/499.md
+++ b/tip/499.md
@@ -11,8 +11,8 @@
 
 # Abstract
 
-Package **msgcat** derives its locale search list from one locale to set.
-This TIP proposes the possibility to use a custom locale search list.
+Package **msgcat** derives its locale search list from one specified locale by constructing a list of this locales and their precedor.
+This TIP proposes to allow a custom locale search list, which may contain any locale.
 
 # Rationale
 
@@ -35,11 +35,11 @@ So, if someone looks for a translation, they are looked up in the given order: A
 % msgcat::mcset {} jan January
 % msgcat::mc jan
 January
-% msgcat::mcset de January Januar
-% msgcat::mc January
+% msgcat::mcset de jan Januar
+% msgcat::mc jan
 Januar
-% msgcat::mcset de_at January Jänner
-% msgcat::mc January
+% msgcat::mcset de_at jan Jänner
+% msgcat::mc jan
 Jänner
 </pre>
 
@@ -60,7 +60,7 @@ Then, I can do a partial translation of some texts which will show-up in French.
 
 Regions like the Vorarlberg belong to Austria and prefer Austrian German, but the local language is closer to Swiss German.
 
-So, their prefered search list is: "de_at de_ch de {}".
+So, their prefered search might be: "de\_at de\_ch de {}".
 
 ## Use-case 3: Secondary language setting
 
@@ -103,10 +103,10 @@ de {}
 A package may also have a package locale.
 The extension is to support a custom package locale search list.
 
-A custom package locale search list may be set by the new subcommand:
+A custom package locale search list may be set by the extended subcommand:
 
 <pre>
-% namespace eval mypack {msgcat::mcpackagelocale setpreferences fr de {} }
+% namespace eval mypack {msgcat::mcpackagelocale preferences fr de {} }
 fr de {}
 </pre>
 
@@ -126,12 +126,23 @@ de
 de {}
 </pre>
 
+A subtile difference exist between "`mcpackagelocale`" subcommands "`set`" and "`preferences`" with no provided arguments:
+
+   *   "`mcpackagelocale set`" will return the current package locale If there is no package locale activated, it will activate it with the current global preferences.
+   *   "`mcpackagelocale preferences`" will only return the current package preferences. If there is no package locale activated, it returns the global preferences.
+
+# Compatibility
+
+Compatibility issues arise, if a package expects, that exactly one catalog file is loaded, if it has only first level message files.
+
+With this extension, multiple first-level message files may be loaded.
+
 # Implementation
 
 The implementation is in tcl fossil in branch
 [tip499-msgcat-custom-preferences](https://core.tcl.tk/tcl/timeline?r=tip499-msgcat-custom-preferences).
 
-There are no tests and no man page jet.
+There are tests but no man page jet.
 Please use this text as man-page.
 
 # Copyright
