tip499: added mcutil subcommands getpreference and getsystemlocale

--- a/tip/499.md
+++ b/tip/499.md
@@ -131,6 +131,35 @@ A subtile difference exist between "`mcpackagelocale`" subcommands "`set`" and "
    *   "`mcpackagelocale set`" will return the current package locale If there is no package locale activated, it will activate it with the current global preferences.
    *   "`mcpackagelocale preferences`" will only return the current package preferences. If there is no package locale activated, it returns the global preferences.
 
+## Extension 3: Export utility function "getpreferences"
+
+It might be useful to get the default preferences of a given locale.
+The corresponding internal function is now exported as:
+<pre>
+% msgcat::mcutil getpreferences de_DE
+de_de de {}
+</pre>
+
+A use case is the merge of two locales to build a mixed custom locale:
+
+<pre>
+% concat [lrange [msgcat::mcutil getpreferences fr_CH] 0 end-1] [msgcat::mcutil getpreferences de_CH]
+fr_CH fr de_CH de {}
+</pre>
+
+## Extension 4: Get the system locale
+
+On msgcat startup, the system locale is evanluated and set.
+Up to now, it could only be found by "`msgcat::mclocale`" after startup.
+If it is changed, it was lost.
+
+It is proposed to return the system locale by the command:
+
+<pre>
+% msgcat::mcutil getsystemlocale
+de_de
+</pre>
+
 # Compatibility
 
 Compatibility issues arise, if a package expects, that exactly one catalog file is loaded, if it has only first level message files.
