corrected command sample output

--- a/tip/499.md
+++ b/tip/499.md
@@ -141,11 +141,11 @@ The corresponding internal function is now exported as:
 de_de de {}
 </pre>
 
-A use case is the merge of two locales to build a mixed custom locale:
+A use case is the merge of two locales to build a mixed custom locale (here a possible bilingual package for "Biel/Bienne"):
 
 <pre>
 % concat [lrange [msgcat::mcutil getpreferences fr_CH] 0 end-1] [msgcat::mcutil getpreferences de_CH]
-fr_CH fr de_CH de {}
+fr_ch fr de_ch de {}
 </pre>
 
 ## Extension 4: Get the system locale
