--- a/tip/492.md
+++ b/tip/492.md
@@ -1,8 +1,8 @@
 # TIP 492: Introspection for 'tk busy'
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Voting
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        19-Dec-2017
 	Post-History:
 	Keywords:       tk busy
