--- a/tip/500.md
+++ b/tip/500.md
@@ -152,12 +152,12 @@ Introspection is done via appropriate options to **info class methods** and
 the **-all** option is _also_ given), and can be found when the new option
 **-scope** is given, depending on what scope is chosen from the options below:
 
-<dl><dt>**-scope public**</dt>
+<dl><dt><b>-scope public</b></dt>
 <dd>Reports the public (public) methods only.</dd>
-<dt>**-scope unexported**</dt>
-<dd>Reports the unexported (non-public, created via naming or **unexport**)
+<dt><b>-scope unexported</b></dt>
+<dd>Reports the unexported (non-public, created via naming or <b>unexport</b>)
 methods only.</dd>
-<dt>**-scope private**</dt>
+<dt><b>-scope private</b></dt>
 <dd>Reports the truly private methods only.</dd></dl>
 
 The **-scope** option causes the **-all** and **-private** options to be
