TIP #489 (Add image widget command to the Tk canvas) is in VOTING state.

--- a/tip/489.md
+++ b/tip/489.md
@@ -1,8 +1,8 @@
 # TIP 489: Add image widget command to the Tk canvas
 	Author:         Scott Pitcher <scottypitcher@gmail.com>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        02-Dec-2017
 	Post-History:
 	Keywords:       canvas, image
