--- a/tip/476.md
+++ b/tip/476.md
@@ -1,8 +1,8 @@
 # TIP 476: Scan/Printf format consistency
 	Author: Jan Nijtmans (jan.nijtmans@gmail.com)
-	State: Voting
+	State: Final
 	Type: Project
-	Vote: In progress
+	Vote: Done
 	Created: 27-Sep-2017
 	Post-history: PM
 	Tcl-Version: 8.7
